k8s/user-apps/rom-o-mat/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rom-o-mat-server
  labels: &labels
    app.kubernetes.io/name: rom-o-mat-server
spec:
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: server
          image: ghcr.io/ftsell/rom-o-mat
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              port: http
          resources:
            requests:
              cpu: "100m"
              memory: "100M"
            limits:
              memory: "250M"
