k8s/user-apps/rom-o-mat/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rom-o-mat-server
  labels: &labels
    app.kubernetes.io/name: rom-o-mat-server
spec:
  selector: *labels
  ports:
    - name: http
      port: 80
      targetPort: http
